--- a/app/src/main/res/layout/activity_bookmark.xml
+++ b/app/src/main/res/layout/activity_bookmark.xml
@@ -8,7 +8,7 @@
     tools:context=".BookmarkActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolBar"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
          android:background="#8A8A8A"/>
